/*
 * $Id: ChangeLog,v 1.575 2003/01/02 09:05:14 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-01-02 12:11 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbtrace.h
  * source/rtl/trace.c
    + Added hb_traceInit() and hb_traceExit()

  * source/vm/cmdarg.c
    + Added support for new hb_traceInit()
    + Added support for //NOTRACE application swtitch to disable auto creation of trace.log file.

  * source/vm/hvm.c
    + Added support for new hb_traceExit()

2003-01-02 01:03 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/hvm.c
    ! Fixed HB_P_FUNCTION, HB_P_FUNCTION, HB_P_SEND, and HB_P_SENDSHORT to be Thread Safe.

2003-01-02 07:28 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * include/inet.h
    ! Using winsock2 instead of winsock. Originarily, it was that way, but
      somehow this has been changed.

2003-01-02 07:01 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * source/rtl/inet.c
    * removed warning when not compiling with thread support

  * include/inet.h
    ! Fixed compilation ( unresolved SD_BOTH ) on some BCC installations.

2003-01-02 05:44 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * source/vm/thread.c
    + Now StartThread on method can be called both with a method pointer or
      with a method name:
        StartThread( oMyObject, oMyMethodPtr, ... )
      or
        StartThread( oMyObject, "MethodName", ... )

  * tests/mttest.prg
    * Changed one of the StartThraed to show the "methodname" call.


2003-01-02 04:20 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * include/hbstack.h
    * Default compilation is now WITHOUT threads; -DHB_THREAD_SUPPORT
      must be specified for thread functions to be included.

  * include/thread.h
  * source/vm/thread.c
    * Changed grammar of StartThread Function as follow (all are
      alternatives)